# GSoC26-RenAIssance-OCR

./: .gitignore  AGENT_INSTRUCTIONS.md  README.md  batch_process_pdfs.py  config.yaml  conftest.py  pyproject.toml  requirements.txt
data/: batch_results.json
data/ground_truth/: metadata.jsonl
notebooks/: baseline_ocr_comparison.ipynb  finetunning_qwen3.5_spanish_ocr.ipynb
prompts/: capability_filter.txt  capability_reflection.txt  guided_refinement.txt  initial_extraction.txt  memory_reflection.txt
src/: models.py
src/evaluation/: evaluator.py  run_eval.py
src/ingestion/: pdf_handler.py
src/logger/: trace_logger.py
src/model_engine/: adapter_downloader.py  backend_factory.py  base_backend.py  local_backend.py  model_executor.py  openrouter_backend.py
src/orchestrator/: agentic_orchestrator.py
src/postprocessing/: __init__.py  lexical_processor.py
src/prompt_manager/: prompt_registry.py
test/: test_pipeline.py
ui/: app.py
