[project]
name = "agentic-document-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "peft>=0.18.1",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "streamlit>=1.55.0",
    "transformers>=5.3.0",
]
