[project]
name = "agentic-document-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
    "diff-match-patch>=20230426",
    "huggingface-hub>=1.6.0",
    "jiwer>=3.0.4",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
    "peft>=0.14.0",
    "pillow>=10.3.0",
    "pydantic>=2.7.0",
    "pymupdf>=1.24.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.0.1",
    "python-levenshtein>=0.25.1",
    "qwen-vl-utils>=0.0.8",
    "rich>=13.7.1",
    "sentencepiece>=0.2.0",
    "streamlit>=1.35.0",
    "torch>=2.3.0",
    "torchvision>=0.20.0",
    "transformers>=4.49.0",
    "watchdog>=4.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test", "tests"]
addopts = "-v --tb=short"
